Decrease the scoreboard tags' font size to avoid overflow with 2-digit scores.

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .score-board .tag {
-  font-size: 3.3vw;
+  font-size: 2.9vw;
   font-family: 'Press Start 2P', cursive;
 }
 
